Fix buttons alignment

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -14,6 +14,7 @@
 }
 
 .restaurant-master {
+  height: 100%;
   display: flex;
   flex-direction: column;
   margin-bottom: 1em;
